<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_authors"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_authors" />
        <item
            android:id="@+id/nav_genres"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_genres" />
        <item
            android:id="@+id/nav_borrowings"
            android:icon="@drawable/ic_borrow"
            android:title="@string/menu_borrowings" />
    </group>
</menu>

